# budget

./: .gitignore  pyproject.toml  requirements.txt
src/: budget.py  budget1.py  dataset.ipynb
