[project]
name = "budget"
version = "0.1.0"
description = "track and provides montly budgets by looking at past transactions"
authors = [
    {name = "Haiirohito",email = "haiirohito@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contourpy (==1.3.2)",
    "cycler (==0.12.1)",
    "fonttools (==4.59.0)",
    "kiwisolver (==1.4.8)",
    "matplotlib (==3.10.5)",
    "numpy (==2.2.6)",
    "packaging (==25.0)",
    "pandas (==2.3.1)",
    "pillow (==11.3.0)",
    "pyparsing (==3.2.3)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "seaborn (==0.13.2)",
    "six (==1.17.0)",
    "tzdata (==2025.2)",
    "asttokens (==3.0.0)",
    "colorama (==0.4.6)",
    "comm (==0.2.3)",
    "debugpy (==1.8.16)",
    "decorator (==5.2.1)",
    "exceptiongroup (==1.3.0)",
    "executing (==2.2.0)",
    "ipykernel (==6.30.1)",
    "ipython (==8.37.0)",
    "jedi (==0.19.2)",
    "jupyter-client (==8.6.3)",
    "jupyter-core (==5.8.1)",
    "matplotlib-inline (==0.1.7)",
    "nest-asyncio (==1.6.0)",
    "parso (==0.8.4)",
    "platformdirs (==4.3.8)",
    "prompt-toolkit (==3.0.51)",
    "psutil (==7.0.0)",
    "pure-eval (==0.2.3)",
    "pygments (==2.19.2)",
    "pywin32 (==311)",
    "pyzmq (==27.0.1)",
    "stack-data (==0.6.3)",
    "tornado (==6.5.2)",
    "traitlets (==5.14.3)",
    "typing-extensions (==4.14.1)",
    "wcwidth (==0.2.13)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
